# Coloring-Fun

./: .dockerignore  .env.coolify.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ColoringBooks.json  Dockerfile  README.en.md  README.md  SECURITY.md  THIRD_PARTY_ASSETS.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: SVG_EVALUATION.md
local-ai/: README.md  app.py  generate_once.py  pyproject.toml  setup.sh  start.sh
scripts/: db-migrate.test.ts  db-migrate.ts  generate-curated-catalog.ts  generate-seo-files.ts  svg-evaluate.test.ts  svg-evaluate.ts  verify-local-supabase.ts
server/: app.test.ts  app.ts  cleanup.ts  config.ts  http.ts  supabase.ts  validation.ts  worker.ts
server/middleware/: auth.ts
server/providers/: fal.ts  gemini.ts  huggingface.ts  index.ts  local-sdxl.ts  openai.ts  replicate.ts  stability.ts  types.ts
server/routes/: admin.ts  artworks.ts  catalog.ts  children.ts  connections.ts  generations.ts  profile.ts
server/security/: crypto.test.ts  crypto.ts
server/services/: assets.ts  catalog.ts  image-processing.test.ts  image-processing.ts  local-prompt.test.ts  local-prompt.ts  moderation.test.ts  moderation.ts  (+4 more)
src/: App.tsx  data.ts  i18n.ts  index.css  main.tsx  types.ts
supabase/: config.toml  test-bootstrap.sql
tests/: authenticated_browser_smoke.py  browser_smoke.py  gallery_canvas_smoke.py
(+47 files in other folders)
