[project]
name = "coloring-fun-local-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.2.0",
  "diffusers>=0.35.0",
  "fastapi>=0.115.0",
  "huggingface-hub>=0.30.0",
  "peft>=0.14.0",
  "pillow>=11.0.0",
  "safetensors>=0.5.0",
  "sentencepiece>=0.2.0",
  "torch>=2.6.0",
  "transformers>=4.49.0",
  "uvicorn>=0.34.0",
]
